fix: update deleteUserById function to delete associated books in backend. Improve signUp form in frontend by adding masks to telefone and matricula inputs, applying a new stylesheet with a custom scrollbar, and implementing error messages that disappear after 5 seconds.

--- a/client/src/styles/user/SignUp.css
+++ b/client/src/styles/user/SignUp.css
@@ -5,6 +5,8 @@
     background-color: #f2f2f2;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    height: 400px; /* Altura fixa */
+    overflow-y: auto;
   }
   
   .signUpForm h2 {
